# Paddle-Lite

./: 0001-Merge-in-concat-function.patch
cmake/: configure.cmake
lite/api/: CMakeLists.txt  cxx_api.cc  cxx_api.h  cxx_api_impl.cc  paddle_api.cc  paddle_use_kernels.h  paddle_use_ops.h  paddle_use_passes.h
lite/backends/fpga/: CMakeLists.txt  monitor.hpp
lite/backends/fpga/KD/: ._tensor.hpp  bypass_helper.hpp  debugger.hpp  dl_engine.cpp  dl_engine.hpp  pe.hpp  pe_params.hpp  repo_version.h  shape.hpp  tensor.hpp  tensor_util.cpp  tensor_util.hpp
lite/backends/fpga/KD/dispatch/: action.hpp  dispatch_headers.hpp  transaction.hpp  transaction_manager.hpp
lite/backends/fpga/KD/llapi/: filter.cpp  filter.h  zynqmp_api.cpp  zynqmp_api.h
lite/backends/fpga/KD/pes/: ._transposed_conv_process.hpp  batchnorm_pe.hpp  bypass_pe.hpp  concat_pe.hpp  conv_pe.hpp  conv_process.hpp  cpu_pe.hpp  crop_pe.cpp  crop_pe.hpp  depthwise_conv_pe.hpp  depthwise_conv_split_pe.hpp  elementwise_add_pe.hpp  elementwise_mul_pe.hpp  fully_connected_pe.hpp  gru_pe.hpp  input_pe.hpp  norm_pe.hpp  output_pe.hpp  pooling_pe.hpp  pooling_process.hpp  pooling_split_pe.hpp  prior_box_pe.cpp  prior_box_pe.hpp  relu_pe.hpp  resize_pe.hpp  scale_pe.hpp  sigmoid_pe.hpp  slice_pe.hpp  softmax_pe.cpp  softmax_pe.hpp  split_pe.hpp  transposed_conv_pe.hpp  transposed_conv_process.hpp  yolobox_pe.hpp
lite/core/: kernel.h  optimizer.h  program.cc  program.h
lite/core/mir/: CMakeLists.txt  fpga_kernel_place_correct_pass.h  kernel_place_correct_pass.h  ssa_graph.cc  ssa_graph.h  static_kernel_pick_pass.cc  static_kernel_pick_pass.h  type_layout_cast_pass.cc  type_precision_cast_pass.cc  type_target_cast_pass.cc
lite/kernels/arm/: box_clip_compute.cc  box_coder_compute.cc  box_coder_compute.h  generate_proposals_compute.cc  im2sequence_compute.cc  mul_compute.cc  mul_compute.h  read_from_array_compute.cc  roi_align_compute.cc  while_compute.h
lite/kernels/fpga/: CMakeLists.txt  activation_compute.cc  activation_compute.h  affine_channel_compute.cc  affine_channel_compute.h  concat_compute.cc  conv_compute.cc  conv_transpose_compute.cc  elementwise_compute.cc  feed_compute.cc  feed_compute.h  fetch_compute.cc  im2sequence_compute.cc  interpolate_compute.cc  interpolate_compute.h  io_copy_compute.cc  layout_compute.cc  multiclass_nms_compute.cc  multiclass_nms_compute.h  pooling_compute.cc  pooling_compute.h  reduce_mean_compute.cc  reduce_mean_compute.h  reshape_compute.cc  reshape_compute.h  slice_compute.cc  softmax_compute.cc  transpose_compute.cc  transpose_compute.h  yolo_box_compute.cc  yolo_box_compute.h
lite/kernels/host/: CMakeLists.txt  activation_compute.cc  distribute_fpn_proposals_compute.cc  multiclass_nms_compute.cc  one_hot_compute.cc  reshape_compute.cc  write_back_compute.cc
lite/model_parser/: CMakeLists.txt  model_parser.cc  model_parser.h
lite/operators/: CMakeLists.txt  conv_op.h  op_params.h
lite/tools/: build_fpga.sh
lite/utils/cv/: CMakeLists.txt  image2tensor_fpga.cc  paddle_image_preprocess.cc  (+1 more)
(+13 files in other folders)
